# openmp-projects

./: .gitignore  CMakeLists.txt  README.md  arm_omp_compile.sh  compile.sh  mac_release.sh  mac_run.sh  main  main.cpp
src/kmp/: main.cpp
src/lj_molecular_dynamics/: main.cpp  tmp.cpp
src/matrix_multiplication/: CMakeLists.txt  main.cpp
src/tmp/: main.cpp
tooling/: mac_bench.py  mac_bench.sh  mac_bench_all.sh  mac_debug.sh  mac_release.sh
